# solana-rust-program

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: accounts.rs  auth.rs  lib.rs  router.rs
src/routes/: create_lucky_number.rs  mod.rs  update_lucky_number.rs
